RESOLVED FIXED310902
Fix logic errors with cloning XML documents
https://bugs.webkit.org/show_bug.cgi?id=310902
Summary Fix logic errors with cloning XML documents
Anne van Kesteren
Reported 2026-03-27 09:06:54 PDT
.
Attachments
Anne van Kesteren
Comment 1 2026-03-27 09:08:53 PDT
EWS
Comment 2 2026-03-27 14:00:12 PDT
Committed 310106@main (641d4a902767): <https://commits.webkit.org/310106@main> Reviewed commits have been landed. Closing PR #61502 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-27 14:01:14 PDT
Note You need to log in before you can comment on or make changes to this bug.