Cherry-pick 310106@main (641d4a902767). https://bugs.webkit.org/show_bug.cgi?id=310902

Fix logic errors with cloning XML documents
    https://bugs.webkit.org/show_bug.cgi?id=310902

    Reviewed by David Kilzer.

    isSVGDocument() is a subset of isXMLDocument() so was never reached.
    And the second bug is that we had XML and XHTML swapped.

    Canonical link: https://commits.webkit.org/310106@main

Canonical link: https://commits.webkit.org/298234.530@webkitglib/2.50